Final Version of Web API

--- a/test(jupyter)/datatest.ipynb
+++ b/test(jupyter)/datatest.ipynb
@@ -723,13 +723,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8215d95c-08fd-4fd0-8a04-138a0b37abd2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[condition]"
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"data_small/TG_STAID000001.txt\", skiprows=20, parse_dates=['    DATE'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "439c07b8-f2ad-4dbe-9320-dcf15ed5121f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STAID</th>\n",
+       "      <th>SOUID</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TG</th>\n",
+       "      <th>Q_TG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-01</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-02</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-03</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-04</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-05</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59316</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>2022-05-27</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59317</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>2022-05-28</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59318</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>2022-05-29</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59319</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>2022-05-30</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59320</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>2022-05-31</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>59321 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       STAID   SOUID       DATE     TG   Q_TG\n",
+       "0          1   35381 1860-01-01     21      0\n",
+       "1          1   35381 1860-01-02     46      0\n",
+       "2          1   35381 1860-01-03     31      0\n",
+       "3          1   35381 1860-01-04     37      0\n",
+       "4          1   35381 1860-01-05     31      0\n",
+       "...      ...     ...        ...    ...    ...\n",
+       "59316      1   35381 2022-05-27  -9999      9\n",
+       "59317      1   35381 2022-05-28  -9999      9\n",
+       "59318      1   35381 2022-05-29  -9999      9\n",
+       "59319      1   35381 2022-05-30  -9999      9\n",
+       "59320      1   35381 2022-05-31  -9999      9\n",
+       "\n",
+       "[59321 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ee650212-ec09-410f-aefd-def23e396602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['   TG'] = df['   TG'] / 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2d04dc2c-015f-4506-a1ef-ec942bfd084e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'year' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m year_data \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m    DATE\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[43myear\u001b[49m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'year' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "year_data = df.loc[df['    DATE'][:4] == year]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "86941f23-22e2-4308-9a2c-295e72f61b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 1800"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d6d372ab-6d07-4c79-b87f-d77d23e315a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = df['    DATE'].squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b21dc488-589b-4830-a7a6-738ff7dd7bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['    DATE'] = df['    DATE'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "974d4404-340b-4f20-8434-eec2c7cf787a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1         True\n",
+       "2         True\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "59316    False\n",
+       "59317    False\n",
+       "59318    False\n",
+       "59319    False\n",
+       "59320    False\n",
+       "Name:     DATE, Length: 59321, dtype: bool"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['    DATE'].str.startswith(str(1860))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c7a99598-be4c-4c5a-bdf5-ca7f3a71ab2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STAID</th>\n",
+       "      <th>SOUID</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TG</th>\n",
+       "      <th>Q_TG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-01</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-02</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-03</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-04</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-01-05</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-12-27</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-12-28</td>\n",
+       "      <td>-9.8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-12-29</td>\n",
+       "      <td>-7.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-12-30</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35381</td>\n",
+       "      <td>1860-12-31</td>\n",
+       "      <td>-12.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>366 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     STAID   SOUID        DATE     TG   Q_TG\n",
+       "0        1   35381  1860-01-01    2.1      0\n",
+       "1        1   35381  1860-01-02    4.6      0\n",
+       "2        1   35381  1860-01-03    3.1      0\n",
+       "3        1   35381  1860-01-04    3.7      0\n",
+       "4        1   35381  1860-01-05    3.1      0\n",
+       "..     ...     ...         ...    ...    ...\n",
+       "361      1   35381  1860-12-27  -10.0      0\n",
+       "362      1   35381  1860-12-28   -9.8      0\n",
+       "363      1   35381  1860-12-29   -7.1      0\n",
+       "364      1   35381  1860-12-30   -3.5      0\n",
+       "365      1   35381  1860-12-31  -12.1      0\n",
+       "\n",
+       "[366 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['    DATE'].str.startswith(str(1860))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56d69a70-f6ef-49c9-8de5-c982d46c53b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
